RESOLVED FIXED221632
Don't crash when reparsing an arrow function and the parsing invariant is broken
https://bugs.webkit.org/show_bug.cgi?id=221632
Summary Don't crash when reparsing an arrow function and the parsing invariant is broken
Saam Barati
Reported 2021-02-09 14:39:39 PST
...
Attachments
patch (2.65 KB, patch)
2021-02-09 15:01 PST, Saam Barati
tzagallo: review+
ews-feeder: commit-queue-
patch for landing (2.66 KB, patch)
2021-02-10 08:54 PST, Saam Barati
ews-feeder: commit-queue-
Saam Barati
Comment 1 2021-02-09 14:40:03 PST
Saam Barati
Comment 2 2021-02-09 15:01:40 PST
Tadeu Zagallo
Comment 3 2021-02-09 15:02:59 PST
Comment on attachment 419771 [details] patch r=me
Mark Lam
Comment 4 2021-02-09 15:04:43 PST
Comment on attachment 419771 [details] patch r=me too
EWS
Comment 5 2021-02-09 16:34:31 PST
commit-queue failed to commit attachment 419771 [details] to WebKit repository. To retry, please set cq+ flag again.
EWS
Comment 6 2021-02-09 19:08:47 PST
commit-queue failed to commit attachment 419771 [details] to WebKit repository. To retry, please set cq+ flag again.
Saam Barati
Comment 7 2021-02-10 08:54:39 PST
Created attachment 419851 [details] patch for landing
EWS
Comment 8 2021-02-10 10:41:10 PST
Found 1 new test failure: http/tests/media/hls/video-duration-accessibility.html
Saam Barati
Comment 9 2021-02-10 10:43:27 PST
(In reply to EWS from comment #8) > Found 1 new test failure: > http/tests/media/hls/video-duration-accessibility.html No
Saam Barati
Comment 10 2021-02-10 10:47:30 PST
Note You need to log in before you can comment on or make changes to this bug.